syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
option java_multiple_files = true;
option csharp_namespace = "GrpcNjordClient.Member";
package com.sep3yg9.njorddata.grpc.protobuf.member;

message CreatingMember {
  string fullName = 1;
  string userName = 2;
  string email = 3;
  string password = 4;
}

message UpdatingMember {
  int32 id = 1;
  string userName = 2;
  string email = 3;
  string password = 4;
}

message SearchingMember {
  string userName = 1;
  string email = 2;
  string fullName = 3;
}

message BasicMember {
  string fullName = 1;
  string userName = 2;
  string email = 3;
}

message BasicTeam {
  int32 id = 1;
  string name = 2;
  string teamLeaderName = 3;
}

message MemberGrpc {
  int32 id = 1;
  string fullName = 2;
  string email = 3;
  string userName = 4;
  string password = 5;
  repeated BasicTeam memberTeams = 6;
}

message MemberList {
  repeated MemberGrpc member = 1;
}

/*
 <b>MemberService</b> MemberService description
 */
service MemberService {
  // CreateMember will create a member and returns it.
  rpc CreateMember(CreatingMember) returns (MemberGrpc);
  // UpdateMember will update a member and return the same member but with the update information.
  rpc UpdateMember(UpdatingMember) returns (google.protobuf.Empty);
  // DeleteMember will delete a specific member through the id sent in arguments.
  rpc DeleteMember(google.protobuf.Int32Value) returns (google.protobuf.Empty);
  // GetByEmail will return a member which email is the same as the one sent in arguments.
  rpc GetByEmail(google.protobuf.StringValue) returns (MemberGrpc);
  // GetById will return a member which ID is the same as the one sent in arguments.
  rpc GetById(google.protobuf.Int32Value) returns (MemberGrpc);
  // SearchMember will return a list of members which contains a value equals to what is sent on the argument.
  rpc SearchMember(SearchingMember) returns (MemberList);
}